added buttons for selected lights

--- a/app/views/lights/index.html.erb
+++ b/app/views/lights/index.html.erb
@@ -1,6 +1,8 @@
 <%= link_to "ALL ON", lights_on_path %> 
 <br>
 <%= link_to "ALL OFF", lights_off_path %>
+<br>
+<%= link_to "ANIMATE", animate_path %>
 <ul>
   <% @lights.each do |light| %>
     <li>
